force-app/main/default/objects/CampaignMember/fields/Campaign_Location__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Location__c</fullName>
    <formula>Campaign.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Location</label>
    <type>Text</type>
</CustomField>