force-app/main/default/objects/CampaignMember/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <formula>Campaign.Start_DateTime__c</formula>
    <label>Campaign Start Date</label>
    <type>DateTime</type>
</CustomField>